@@ -1,7 +1,7 @@
 package io.confluent.parallelconsumer.internal;
 
 /*-
- * Copyright (C) 2020-2022 Confluent, Inc.
+ * Copyright (C) 2020-2023 Confluent, Inc.
  */
 
 import io.confluent.csid.utils.TimeUtils;
@@ -1140,45 +1140,36 @@ public abstract class AbstractParallelEoSStreamProcessor<K, V> implements Parall
     protected <R> List<ParallelConsumer.Tuple<ConsumerRecord<K, V>, R>> runUserFunction(Function<PollContextInternal<K, V>, List<R>> usersFunction,
                                                                                         Consumer<R> callback,
                                                                                         List<WorkContainer<K, V>> workContainerBatch) {
-        // call the user's function
-        List<R> resultsFromUserFunction;
-        PollContextInternal<K, V> context = new PollContextInternal<>(workContainerBatch);
+        if (log.isDebugEnabled()) {
+            // first offset of the batch
+            MDC.put(MDC_WORK_CONTAINER_DESCRIPTOR, workContainerBatch.get(0).offset() + "");
+        }
+        log.trace("Pool received: {}", workContainerBatch);
+
+        /*
+         *  Handle stale work from the batch, before creating the internal context for running user function.
+         *  The context created is used by the "wrapped" user function to inject transactional producer synchronization.
+         */
+        final boolean containsStaleWork = wm.checkIfWorkIsStale(workContainerBatch);
+
+        if (containsStaleWork) {
+            handleStaleWork(workContainerBatch);
+        }
+
+        final List<WorkContainer<K, V>> activeWorkContainers = containsStaleWork ?
+                workContainerBatch
+                        .stream()
+                        .filter(wc -> !wm.checkIfWorkIsStale(wc))
+                        .collect(Collectors.toList())
+                : workContainerBatch;
+
+        final PollContextInternal<K, V> context = new PollContextInternal<>(activeWorkContainers);
 
         try {
-            if (log.isDebugEnabled()) {
-                // first offset of the batch
-                MDC.put(MDC_WORK_CONTAINER_DESCRIPTOR, workContainerBatch.get(0).offset() + "");
+            if (!activeWorkContainers.isEmpty()) {
+                return runUserFunctionInternal(usersFunction, context, callback, activeWorkContainers);
             }
-            log.trace("Pool received: {}", workContainerBatch);
-
-            //
-            boolean workIsStale = wm.checkIfWorkIsStale(workContainerBatch);
-            if (workIsStale) {
-                // when epoch's change, we can't remove them from the executor pool queue, so we just have to skip them when we find them
-                log.debug("Pool found work from old generation of assigned work, skipping message as epoch doesn't match current {}", workContainerBatch);
-                return null;
-            }
-
-            resultsFromUserFunction = usersFunction.apply(context);
-
-            for (final WorkContainer<K, V> kvWorkContainer : workContainerBatch) {
-                onUserFunctionSuccess(kvWorkContainer, resultsFromUserFunction);
-            }
-
-            // capture each result, against the input record
-            var intermediateResults = new ArrayList<Tuple<ConsumerRecord<K, V>, R>>();
-            for (R result : resultsFromUserFunction) {
-                log.trace("Running users call back...");
-                callback.accept(result);
-            }
-
-            // fail or succeed, either way we're done
-            for (var kvWorkContainer : workContainerBatch) {
-                addToMailBoxOnUserFunctionSuccess(context, kvWorkContainer, resultsFromUserFunction);
-            }
-            log.trace("User function future registered");
-
-            return intermediateResults;
+            return Collections.emptyList();
         } catch (Exception e) {
             // handle fail
             var cause = e.getCause();
@@ -1196,8 +1187,59 @@ public abstract class AbstractParallelEoSStreamProcessor<K, V> implements Parall
             }
             throw e; // trow again to make the future failed
         } finally {
-            context.getProducingLock().ifPresent(ProducerManager.ProducingLock::unlock);
+            cleanUpContext(context);
         }
+    }
+
+    /**
+     * Given the batch of work containers, publish stale work to feedback loop to be reduced from in progress work.
+     *
+     * @param workContainerBatch
+     */
+    protected void handleStaleWork(final List<WorkContainer<K, V>> workContainerBatch) {
+        final List<WorkContainer<K, V>> staleWorkContainers = workContainerBatch
+                .stream()
+                .filter(wm::checkIfWorkIsStale)
+                .collect(Collectors.toList());
+        final PollContextInternal<K, V> internalContext = new PollContextInternal<>(staleWorkContainers);
+        try {
+            // when epoch's change, we can't remove them from the executor pool queue, so we just have to skip them when we find them
+            log.debug("Pool found work from old generation of assigned work, skipping message as epoch doesn't match current {}", staleWorkContainers);
+            staleWorkContainers.forEach(wc -> addToMailbox(internalContext, wc));
+        } finally {
+            cleanUpContext(internalContext);
+        }
+    }
+
+    protected <R> ArrayList<Tuple<ConsumerRecord<K, V>, R>> runUserFunctionInternal(final Function<PollContextInternal<K, V>, List<R>> usersFunction,
+                                                                                    final PollContextInternal<K, V> context,
+                                                                                    final Consumer<R> callback,
+                                                                                    final List<WorkContainer<K, V>> activeWorkContainers) {
+        List<R> resultsFromUserFunction;
+        resultsFromUserFunction = usersFunction.apply(context);
+
+        for (final WorkContainer<K, V> kvWorkContainer : activeWorkContainers) {
+            onUserFunctionSuccess(kvWorkContainer, resultsFromUserFunction);
+        }
+
+        // capture each result, against the input record
+        var intermediateResults = new ArrayList<Tuple<ConsumerRecord<K, V>, R>>();
+        for (R result : resultsFromUserFunction) {
+            log.trace("Running users call back...");
+            callback.accept(result);
+        }
+
+        // fail or succeed, either way we're done
+        for (var kvWorkContainer : activeWorkContainers) {
+            addToMailBoxOnUserFunctionSuccess(context, kvWorkContainer, resultsFromUserFunction);
+        }
+        log.trace("User function future registered");
+
+        return intermediateResults;
+    }
+
+    private void cleanUpContext(final PollContextInternal<K, V> context) {
+        context.getProducingLock().ifPresent(ProducerManager.ProducingLock::unlock);
     }
 
     protected void addToMailBoxOnUserFunctionSuccess(PollContextInternal<K, V> context, WorkContainer<K, V> wc, List<?> resultsFromUserFunction) {
