@@ -20,6 +20,7 @@ endif::[]
 
 * fixes: #195 NoSuchFieldException when using consumer inherited from KafkaConsumer (#469)
 * fix: After new performance fix PR#530 merges - corner case could cause out of order processing (#534)
+* fix: Cleanup WorkManager's count of in-progress work, when work is stale after partition revocation (#547)
 
 === Improvements
 
